kubernetes/apps/artemis-cluster/sabnzbd/app/HttpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app sabnzbd
  namespace: &ns artemis-cluster
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &host sabnzbd.dcunha.io
spec:
  hostnames:
    - "sabnzbd.dcunha.io"
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: *app
          kind: Service
          namespace: *ns
          port: 8080
